fix : twitter url

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="content">
             <div class="tweet-container">
-            <a href="http://twitter.com/intent/tweet/?text=I%20just%20created%20a%20new%20Java%20Spring%20application%20on%20middleware.sh&amp;hashtags=middlewareSH%2CVSTS%20%40devops%20%40VSTS">
+            <a href="http://twitter.com/intent/tweet/?text=I%20just%20created%20a%20new%20Java%20Spring%20application%20on%20middleware.sh&amp;hashtags=middlewareSH%2DevOpsSorted%20%middleware_sh">
                 <img src="img/tweetThis.svg" />
             </a>            
         </div>
